1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: string-writer-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: string-writer-app
  template:
    metadata:
      labels:
        app: string-writer-app
    spec:
      volumes:
        - name: string-file
          emptyDir: {}
      containers:
        - name: string-writer
          image: lauraleonilla/filewriter:latest
          volumeMounts:
          - name: string-file
            mountPath: /usr/src/app/files
        - name: string-reader
          image: lauraleonilla/filereader:latest
          volumeMounts:
          - name: string-file
            mountPath: /usr/src/app/files
