1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: string-generator-server-srv
spec:
  type: ClusterIP
  selector:
    app: string-generator-server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
