1.10/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: string-writer-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: string-writer-srv
          servicePort: 2345
